# Odrive_CAN_Custom_Msg

./: README.md
can_control_package/: CMakeLists.txt
can_control_package/src/: calib.cpp  can_sender.cpp  launch.py  rbc25_ctrl.cpp  test_node.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/can_control_package/lib/can_control_package/: can_sender  rbc25_ctrl  test_node
install/can_control_package/share/can_control_package/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/can_control_package/share/can_control_package/cmake/: can_control_packageConfig.cmake
install/odrive_custom_msg/include/odrive_custom_msg/odrive_custom_msg/msg/: ca_nmsg.h  ca_nmsg.hpp  control.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/odrive_custom_msg/include/odrive_custom_msg/odrive_custom_msg/msg/detail/: ca_nmsg__builder.hpp  ca_nmsg__functions.h  ca_nmsg__rosidl_typesupport_fastrtps_cpp.hpp  ca_nmsg__traits.hpp  ca_nmsg__type_support.h  ca_nmsg__type_support.hpp  control__functions.c  control__functions.h  control__rosidl_typesupport_fastrtps_cpp.hpp  control__rosidl_typesupport_introspection_c.h  control__struct.hpp  control__traits.hpp  control__type_support.hpp
install/odrive_custom_msg/share/ament_index/resource_index/parent_prefix_path/: odrive_custom_msg
install/odrive_custom_msg/share/ament_index/resource_index/rosidl_interfaces/: odrive_custom_msg
install/odrive_custom_msg/share/odrive_custom_msg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odrive_custom_msg/share/odrive_custom_msg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_odrive_custom_msg__rosidl_generator_pyExport.cmake  export_odrive_custom_msg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_odrive_custom_msg__rosidl_typesupport_fastrtps_cExport.cmake  export_odrive_custom_msg__rosidl_typesupport_fastrtps_cppExport.cmake  odrive_custom_msgConfig.cmake  odrive_custom_msg__rosidl_typesupport_cExport-noconfig.cmake  odrive_custom_msg__rosidl_typesupport_cppExport-noconfig.cmake  odrive_custom_msg__rosidl_typesupport_introspection_cExport-noconfig.cmake  odrive_custom_msg__rosidl_typesupport_introspection_cExport.cmake
install/odrive_custom_msg/share/odrive_custom_msg/msg/: Control.idl
log/: latest_build
odrive_custom_msg/: CMakeLists.txt  package.xml
odrive_custom_msg/msg/: Control.msg
odrive_custom_msg/robocon_msg/: CAN_msg.msg  Control.msg
odrive_custom_msg/src/: can_sender.cpp  rbc25_ctrl.cpp  test_node.cpp
